# offers_sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  test_cli.py
dumped_clients/: requests.json
example_input_files/: ids.json  products.json
offers_sdk/: __init__.py  cli.py  client.py  exceptions.py
offers_sdk/models/: __init__.py  offer.py  product.py
offers_sdk/services/: __init__.py  aio_http_client.py  api_response.py  http_client_interface.py  httpx_client.py  requests_client.py
tests/: conftest.py  test_01_init_client.py  test_02_auth_requests.py  test_03_other_requests.py  test_04_dataclasses.py  test_05_cli.py
tests/dumped_clients/: aiohttp.json  aiohttp_wrong_refresh_token.json  httpx.json  httpx_wrong_refresh_token.json  nonsense_http_client.json  requests_wrong_refresh_token.json
