[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offers_sdk"
version = "0.1.0"
description = "SDK for interacting with the Offers API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Milos Halda", email="milos.halda@gmail.com"}]
dependencies = [
    "requests>=2.31",
    "httpx>=0.26",
    "aiohttp>=3.9"
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/haldami/offers_sdk"

[project.scripts]
offers-cli = "offers_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["offers_sdk", "offers_sdk.*"]
